2008-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Speed up DirectProduct directly using Lisp operations.
	* src/interp/vmlisp.lisp: add QLESSP macro.
	src/interp/sys-pkg.lisp: export it.
	src/algebra/vector.spad.pamphlet: Use Lisp operations
	in comparisons.

2008-10-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/ptrees.boot: add code from ptrop.boot
	src/interp/ptrop.boot: Remove.
	src/interp/Makefile.in: Adjust
	src/interp/g-opt.boot, src/interp/g-util.boot,
	src/interp/i-code.boot, src/interp/interop.boot,
	src/interp/nrunfast.boot, src/interp/pspad2.boot,
	src/interp/template.boot, src/interp/termrw.boot: Misc cleanups.

2008-10-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/lisp/fricas-lisp.lisp:  Turn
	Closure CL based AXIOMsys into binary.
	src/sman/sman.c: Adjust.

2008-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet: Use SExpression as
	representation of OutputForm.
	src/algebra/Makefile.in, src/algebra/boo6.input: Adjust.

2008-10-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Correct Shoe 'is' with strings.
	* src/boot/tytree1.boot: bfIS1(): Do not convert strings
	to symbols.

2008-10-09  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/interp/i-syscmd.boot: fix thinko (qcdr ob should be qcdr),
	thanks Bill Page

	* src/interp/i-syscmd.boot: spadClosure? and writifyInner: deal
	with newGoGet - problem introduced by switch to functions in
	SPADCALL, and WRAPPED in )history )save and )restore

2008-10-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Cleanup of renamings.
	* src/boot/typrops.boot: Do not rename "substitute".
	src/interp/property.lisp: Do not rename "SUBST".
	src/interp/br-op1.boot, src/interp/br-op2.boot,
	src/interp/br-prof.boot, src/interp/br-util.boot,
	src/interp/database.boot, src/interp/define.boot,
	src/interp/format.boot, src/interp/ht-util.boot,
	src/interp/lisplib.boot, src/interp/mark.boot,