@@ -1,6 +1,0 @@
-#!/bin/sh -
-# this is a minimalistic script to start axiom in gnu emacs, using its axiom
-# mode.  To make it work, you have to move axiom.el to a place where emacs can
-# find it. For example, /usr/share/emacs/site-lisp/ should work.
-export AXIOMEDITOR='emacsclient +$line $name >/dev/null 2>&1'
-emacs --eval='(progn (server-start) (setq load-path  (cons (quote "~/emacs") load-path)) (setq auto-mode-alist (cons (quote ("\\.fri" . fricas-mode)) auto-mode-alist)) (require (quote fricas)))' -f fricas
