@@ -1,3 +1,9 @@
+2008-10-20  Ralf Hemmecke  <ralf@hemmecke.de>
+
+	* Makefile.in, configure.ac, contrib/emacs/Makefile.in:
+	Install fricas.el and an efricas script to run fricas inside
+	emacs.
+
 2008-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	Speed up DirectProduct directly using Lisp operations.
